<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.ucoz.abondarenko.MainActivity" 
    android:orientation="vertical"
    android:background="@color/light_brown">
    
    <FrameLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button 
       		android:layout_width="200dp"
       		android:layout_height="wrap_content"
       		android:text="@string/exam"
       		android:id="@+id/btnExam"
        	style="@style/ThemeButton"        
        	android:layout_gravity="center"/>
    </FrameLayout>
    
    <FrameLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
        	android:id="@+id/btnList"
       		style="@style/ThemeButton"
       		android:layout_width="200dp"
        	android:layout_height="wrap_content"
        	android:layout_gravity="center"       
       		android:text="@string/list"/>
    </FrameLayout>
    
    <FrameLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button             
        	android:layout_width="200dp"
      		android:layout_height="wrap_content"
       		android:text="@string/study"
       		android:id="@+id/btnStudy"
       		style="@style/ThemeButton"
       		android:layout_gravity="center"/>
    </FrameLayout>
</LinearLayout>
