<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <FrameLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">            
            <TextView
                android:layout_width="wrap_content"
           		android:layout_height="wrap_content"
            	android:id="@+id/txtInfinitive"            
            	android:text="@string/infinitive"
            	android:gravity="center"
            	android:layout_marginLeft="5dp"
            	android:layout_marginTop="10dp"
            	android:layout_marginRight="5dp"
            	android:layout_marginBottom="10dp"
            	android:textSize="16sp"
            	android:textStyle="bold"
            	style="@style/CustomTextView"/>
        </FrameLayout>
        
        <FrameLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView 
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:id="@+id/txtPastSsimple"            
            	android:text="@string/pastSsimple"
            	android:gravity="center"
            	android:layout_marginLeft="5dp"
            	android:layout_marginTop="10dp"
            	android:layout_marginRight="5dp"
            	android:layout_marginBottom="10dp"
            	android:textSize="16sp"
            	android:textStyle="bold"
            	style="@style/CustomTextView"/>            
        </FrameLayout>
        
        <FrameLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView 
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:id="@+id/txtPastParticiple"            
            	android:text="@string/pastParticiple"
            	android:gravity="center"
            	android:layout_marginLeft="5dp"
            	android:layout_marginTop="10dp"
            	android:layout_marginRight="5dp"
            	android:layout_marginBottom="10dp"
            	android:textSize="16sp"
            	android:textStyle="bold"
            	style="@style/CustomTextView"/>
        </FrameLayout>
        
    </LinearLayout>   
     
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTranslation"
        android:text="@string/translation"
        android:layout_marginLeft="10dp"
        android:textSize="14sp"
        style="@style/CustomTextView"/>

   
    
</LinearLayout>
